[gd_scene load_steps=6 format=2]

[ext_resource path="res://fonts/Heebo/Heebo-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/new_card_game/TorahChallengePanel.gd" type="Script" id=2]
[ext_resource path="res://fonts/IBM_Plex_Sans_Hebrew/IBMPlexSansHebrew-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
use_mipmaps = true
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 26
use_mipmaps = true
use_filter = true
extra_spacing_space = 1
font_data = ExtResource( 1 )

[node name="TorahChallengePanel" type="Panel"]
modulate = Color( 1, 1, 1, 0.862745 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -500.0
margin_top = -250.0
margin_right = 500.0
margin_bottom = 250.0
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="OpeningLabel" type="Label" parent="VBoxContainer"]
margin_right = 1000.0
margin_bottom = 217.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Your opponent is about to replace one of your Timeline cards!

Answer correctly to earn a reward:

Which Sage taught the following?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_top = 221.0
margin_right = 1000.0
margin_bottom = 231.0
grow_vertical = 2
rect_min_size = Vector2( 0, 10 )

[node name="Panel" type="Panel" parent="VBoxContainer/MarginContainer"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 1, 1, 1, 0.768627 )
show_behind_parent = true
margin_right = 1000.0
margin_bottom = 5.0
rect_min_size = Vector2( 0, 5 )

[node name="CenterLabel" type="Label" parent="VBoxContainer"]
margin_top = 235.0
margin_right = 1000.0
margin_bottom = 452.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 2 )
text = "Placeholder text for quote"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 456.0
margin_right = 1000.0
margin_bottom = 471.0
rect_min_size = Vector2( 0, 15 )

[node name="SageOptionsContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 329.0
margin_right = 1000.0
margin_bottom = 471.0
rect_min_size = Vector2( 0, 125 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/SageOptionsContainer"]
margin_right = 25.0
margin_bottom = 142.0
rect_min_size = Vector2( 25, 0 )

[node name="SageOption1" type="Button" parent="VBoxContainer/SageOptionsContainer" groups=["torah_challenge_buttons"]]
margin_left = 29.0
margin_right = 322.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 125 )
size_flags_horizontal = 7
size_flags_vertical = 0
text = "Sage 1"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/SageOptionsContainer"]
margin_left = 326.0
margin_right = 351.0
margin_bottom = 142.0
rect_min_size = Vector2( 25, 0 )

[node name="SageOption2" type="Button" parent="VBoxContainer/SageOptionsContainer" groups=["torah_challenge_buttons"]]
margin_left = 355.0
margin_right = 649.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 125 )
size_flags_horizontal = 7
size_flags_vertical = 0
text = "Sage 2"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/SageOptionsContainer"]
margin_left = 653.0
margin_right = 678.0
margin_bottom = 142.0
rect_min_size = Vector2( 25, 0 )

[node name="SageOption3" type="Button" parent="VBoxContainer/SageOptionsContainer" groups=["torah_challenge_buttons"]]
margin_left = 682.0
margin_right = 975.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 125 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "Sage 3"

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/SageOptionsContainer"]
margin_left = 979.0
margin_right = 999.0
margin_bottom = 142.0
rect_min_size = Vector2( 20, 0 )

[node name="RewardOptionsContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 346.0
margin_right = 1000.0
margin_bottom = 471.0
rect_min_size = Vector2( 0, 125 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/RewardOptionsContainer"]
margin_right = 25.0
margin_bottom = 125.0
rect_min_size = Vector2( 25, 0 )

[node name="EarnCardOption" type="Button" parent="VBoxContainer/RewardOptionsContainer"]
margin_left = 29.0
margin_right = 483.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 125 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "TAKE EXTRA CARD"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/RewardOptionsContainer"]
margin_left = 487.0
margin_right = 512.0
margin_bottom = 125.0
rect_min_size = Vector2( 25, 0 )

[node name="EarnMeritsOption" type="Button" parent="VBoxContainer/RewardOptionsContainer"]
margin_left = 516.0
margin_right = 971.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 125 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "EARN 5 Merits (UP TO MAXIMUM)"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/RewardOptionsContainer"]
margin_left = 975.0
margin_right = 1000.0
margin_bottom = 125.0
rect_min_size = Vector2( 25, 0 )

[node name="FailureOptionsContainer" type="HBoxContainer" parent="VBoxContainer"]
visible = false
margin_top = 346.0
margin_right = 1000.0
margin_bottom = 471.0
rect_min_size = Vector2( 0, 125 )

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/FailureOptionsContainer"]
margin_right = 200.0
margin_bottom = 125.0
rect_min_size = Vector2( 200, 0 )

[node name="ContinueButton" type="Button" parent="VBoxContainer/FailureOptionsContainer"]
margin_left = 204.0
margin_right = 796.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 125 )
size_flags_horizontal = 3
size_flags_vertical = 0
text = "CONTINUE"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/FailureOptionsContainer"]
margin_left = 800.0
margin_right = 1000.0
margin_bottom = 125.0
rect_min_size = Vector2( 200, 0 )

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
margin_top = 475.0
margin_right = 1000.0
margin_bottom = 500.0
rect_min_size = Vector2( 0, 25 )

[connection signal="pressed" from="VBoxContainer/RewardOptionsContainer/EarnCardOption" to="." method="_on_EarnCardOption_pressed"]
[connection signal="pressed" from="VBoxContainer/RewardOptionsContainer/EarnMeritsOption" to="." method="_on_EarnMeritsOption_pressed"]
[connection signal="pressed" from="VBoxContainer/FailureOptionsContainer/ContinueButton" to="." method="_on_ContinueButton_pressed"]
